# bson-rust

./: #test#  .gitignore  .travis.yml  AGENTS.md  Cargo.toml  README.md  clippy.toml  migration-3.0.md  rustfmt.toml
.evergreen/: Cargo.lock.msrv  MSRV-Cargo.toml.diff  check-clippy.sh  check-rustdoc.sh  check-rustfmt.sh  check-wasm.sh  compile-only.sh  config.yml  feature-sets.sh  install-dependencies.sh  install-fuzzer.sh  release-danger-do-not-run-manually.sh  releases.yml  run-fuzzer.sh  run-tests-chrono.sh  run-tests-decimal128.sh  run-tests-no-default-features.sh  run-tests-serde.sh  run-tests-u2i.sh  run-tests.sh  run-wasm-tests.sh
.github/: dependabot.yml
benches/: rawbson.rs
etc/: run-benchmarks.sh  update-spec-tests.sh
examples/: decode.rs  deserialize.rs  encode.rs  serialize.rs  test.bson
fuzz/: Cargo.toml  generate_corpus.rs  run-fuzzer.sh
fuzz/fuzz_targets/: decode.rs  deserialize.rs  encoding.rs  iterate.rs  malformed_length.rs  raw_decode.rs  raw_decode_utf8_lossy.rs  raw_deserialize.rs  raw_deserialize_utf8_lossy.rs  serialization.rs  string_handling.rs  type_markers.rs
proptest-regressions/raw/test/: mod.txt
serde-tests/: Cargo.toml  build.rs  json.rs  options.rs  test.rs  test.rs.in
src/: base64.rs  binary.rs  bson.rs  datetime.rs  de.rs  decimal128.rs  decoder.rs  doc.rs  document.rs  encoder.rs  error.rs  extjson.rs  facet.rs  lib.rs  macros.rs  oid.rs  ordered.rs  raw.rs  ser.rs  serde_helpers.rs  spec.rs  tests.rs  utf8_lossy.rs  uuid.rs
src/binary/: vector.rs
src/bson/: json.rs
src/compat/: mod.rs  u2f.rs
src/datetime/: builder.rs  mod.rs
src/de/: binary.rs  error.rs  js.rs  mod.rs  object_id.rs  raw.rs  regexp.rs  serde.rs  utc_datetime.rs
src/decoder/: error.rs  mod.rs  object_id.rs  serde.rs
src/encoder/: error.rs  mod.rs  serde.rs
src/error/: datetime.rs  decimal128.rs  oid.rs  uuid.rs  value_access.rs
src/extjson/: de.rs  json.rs  mod.rs  models.rs
src/facet/: format.rs  opaque.rs  parse.rs  ser.rs  test.rs
src/facet/format/: opaque.rs
src/raw/: array.rs  array_buf.rs  bson.rs  bson_ref.rs  cstr.rs  de.rs  doc.rs  doc_writer.rs  document.rs  document_buf.rs  elem.rs  error.rs  iter.rs  lazy.rs  mod.rs  owned_bson.rs  props.rs  serde.rs  test.rs  value.rs
src/raw/de/: binary.rs  datetime.rs  js.rs  object_id.rs  regex.rs
src/raw/document_buf/: raw_writer.rs
src/raw/serde/: bson_visitor.rs  seeded.rs  seeded_visitor.rs
src/raw/test/: append.rs  mod.rs  props.rs
src/ser/: error.rs  mod.rs  raw.rs  serde.rs
src/ser/raw/: document_serializer.rs  len_serializer.rs  mod.rs  value_serializer.rs
src/spec/: fmt.rs  mod.rs
src/tests/: bench.rs  binary_subtype.rs  corpus.rs  datetime.rs  facet.rs  mod.rs  modules.rs  serde.rs  serde_helpers.rs
src/tests/facet/: corpus.rs  format.rs  parse.rs  ser.rs
src/tests/modules/: binary.rs  bson.rs  document.rs  lock.rs  macros.rs  mod.rs  oid.rs  ordered.rs  ser.rs  serializer_deserializer.rs
src/tests/serde/: json.rs  serialize_deserialize.rs  util.rs
src/tests/spec/: corpus.rs  mod.rs  vector.rs
src/tests/spec/json/bson-binary-vector/: README.md
src/tests/spec/json/bson-corpus/: document.json  top.json
src/uuid/: mod.rs  test.rs
tests/: lib.rs  oid.rs  serde.rs
tests/modules/: bson.rs  encoder.rs  encoder_decoder.rs  macros.rs  mod.rs  oid.rs  ordered.rs  ser.rs  serializer_deserializer.rs
tests/spec/: corpus.rs  mod.rs
wasm-test/: Cargo.toml
wasm-test/.cargo/: config.toml
wasm-test/src/: lib.rs  test.rs
