[package]
name = "bson"
version = "2.2.0-beta.1"
authors = [
    "Y. T. Chung <zonyitoo@gmail.com>",
    "Kevin Yeh <kevinyeah@utexas.edu>",
    "Saghm Rossi <saghmrossi@gmail.com>",
    "Patrick Freed <patrick.freed@mongodb.com>",
    "Isabel Atkinson <isabel.atkinson@mongodb.com>",
]
description = "Encoding and decoding support for BSON in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mongodb/bson-rust"
edition = "2018"
keywords = ["bson", "mongodb", "serde", "serialization", "deserialization"]
categories = ["encoding"]

# By default cargo include everything git include
# cargo diet can help to manage what's not useful.
exclude = [
    "etc/**",
    "examples/**",
    "fuzz/**",
    "serde-tests/**",
    "src/tests/**",
    "rustfmt.toml",
    ".travis.yml",
    ".evergreen/**",
    ".gitignore"
]

[features]
default = []
# if enabled, include API for interfacing with chrono 0.4
chrono-0_4 = []
# if enabled, include API for interfacing with uuid 0.8
uuid-0_8 = []
# if enabled, include serde_with interop.
# should be used in conjunction with chrono-0_4 or uuid-0_8.
# it's commented out here because Cargo implicitly adds a feature flag for
# all optional dependencies.
# serde_with

[lib]
name = "bson"

[dependencies]
ahash = "0.7.2"
chrono = { version = "0.4.15", features = ["std"], default-features = false }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "1.6.2"
hex = "0.4.2"
base64 = "0.13.0"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde_bytes = "0.11.5"
serde_with = { version = "1", optional = true }

[dev-dependencies]
assert_matches = "1.2"
criterion = "0.3.0"
pretty_assertions = "0.6.1"
proptest = "1.0.0"
serde_bytes = "0.11"
chrono = { version = "0.4", features = ["serde", "clock", "std"], default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]