[package]
name = "serde-tests"
version = "0.1.0"
authors = ["Kevin Yeh <kevinyeah@utexas.edu>"]
edition = "2018"

[features]
default = []
chrono-0_4 = ["chrono", "bson/chrono-0_4"]
serde-with = ["serde_with", "bson/serde_with"]

[dependencies]
bson = { path = "..", default-features = false }
serde = { version = "1.0", features = ["derive"] }
pretty_assertions = "0.6.1"
hex = "0.4.2"
serde_with = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
serde_json = "1"
rmp-serde = "0.15"
base64 = "0.13.0"

[lib]
name = "serde_tests"
path = "lib.rs"

[[test]]
name = "serde"
path = "test.rs"
